; ModuleID = '/home/carl/AnghaBench/freebsd/stand/liblua/extr_lstd.c_fopen.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/liblua/extr_lstd.c_fopen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32, i64 }
%struct.stat = type { i32, i32 }

@O_RDONLY = common dso_local global i32 0, align 4
@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@O_TRUNC = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@VE_GUESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_5__* @fopen(i8* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.stat, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_5__*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %70

14:                                               ; preds = %2
  %15 = load i8*, i8** %5, align 8
  %16 = getelementptr inbounds i8, i8* %15, i32 1
  store i8* %16, i8** %5, align 8
  %17 = load i8, i8* %15, align 1
  %18 = sext i8 %17 to i32
  switch i32 %18, label %26 [
    i32 114, label %19
    i32 119, label %21
  ]

19:                                               ; preds = %14
  %20 = load i32, i32* @O_RDONLY, align 4
  store i32 %20, i32* %8, align 4
  store i32 0, i32* %9, align 4
  br label %27

21:                                               ; preds = %14
  %22 = load i32, i32* @O_WRONLY, align 4
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* @O_CREAT, align 4
  %24 = load i32, i32* @O_TRUNC, align 4
  %25 = or i32 %23, %24
  store i32 %25, i32* %9, align 4
  br label %27

26:                                               ; preds = %14
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %70

27:                                               ; preds = %21, %19
  %28 = load i8*, i8** %5, align 8
  %29 = load i8, i8* %28, align 1
  %30 = sext i8 %29 to i32
  %31 = icmp eq i32 %30, 43
  br i1 %31, label %32, label %34

32:                                               ; preds = %27
  %33 = load i32, i32* @O_RDWR, align 4
  store i32 %33, i32* %8, align 4
  br label %34

34:                                               ; preds = %32, %27
  %35 = load i8*, i8** %4, align 8
  %36 = load i32, i32* %8, align 4
  %37 = load i32, i32* %9, align 4
  %38 = or i32 %36, %37
  %39 = call i32 @open(i8* %35, i32 %38)
  store i32 %39, i32* %7, align 4
  %40 = load i32, i32* %7, align 4
  %41 = icmp slt i32 %40, 0
  br i1 %41, label %42, label %43

42:                                               ; preds = %34
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %70

43:                                               ; preds = %34
  %44 = call %struct.TYPE_5__* @malloc(i32 16)
  store %struct.TYPE_5__* %44, %struct.TYPE_5__** %10, align 8
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %46 = icmp eq %struct.TYPE_5__* %45, null
  br i1 %46, label %47, label %50

47:                                               ; preds = %43
  %48 = load i32, i32* %7, align 4
  %49 = call i32 @close(i32 %48)
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %70

50:                                               ; preds = %43
  %51 = load i32, i32* %7, align 4
  %52 = call i64 @fstat(i32 %51, %struct.stat* %6)
  %53 = icmp ne i64 %52, 0
  br i1 %53, label %54, label %59

54:                                               ; preds = %50
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %56 = call i32 @free(%struct.TYPE_5__* %55)
  %57 = load i32, i32* %7, align 4
  %58 = call i32 @close(i32 %57)
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %3, align 8
  br label %70

59:                                               ; preds = %50
  %60 = load i32, i32* %7, align 4
  %61 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %62 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %61, i32 0, i32 0
  store i32 %60, i32* %62, align 8
  %63 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %64 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %63, i32 0, i32 2
  store i64 0, i64* %64, align 8
  %65 = getelementptr inbounds %struct.stat, %struct.stat* %6, i32 0, i32 0
  %66 = load i32, i32* %65, align 4
  %67 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  %68 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %67, i32 0, i32 1
  store i32 %66, i32* %68, align 4
  %69 = load %struct.TYPE_5__*, %struct.TYPE_5__** %10, align 8
  store %struct.TYPE_5__* %69, %struct.TYPE_5__** %3, align 8
  br label %70

70:                                               ; preds = %59, %54, %47, %42, %26, %13
  %71 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  ret %struct.TYPE_5__* %71
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local %struct.TYPE_5__* @malloc(i32) #1

declare dso_local i32 @close(i32) #1

declare dso_local i64 @fstat(i32, %struct.stat*) #1

declare dso_local i32 @free(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
